# EPGDatasetGenerator

./: .env.example  .gitignore  01-GenerateEPGDataset.py  02-GenerateEPGDatasetSubset.py  03-AnnotateEPGDatasetSubset.py  GenerateEPGDataset.py  GenerateEPGDatasetSubset.py  GenerateEPGDatasetSubsetAnnotations.py  Readme.md  pyproject.toml
utils/: constants.py  edcb.py  epg.py
