[tool.poetry]
name = "EPGDatasetGenerator"
version = "1.0.0"
description = ""
authors = ["tsukumi <tsukumijima@users.noreply.github.com>"]
# ref: https://github.com/python-poetry/poetry/issues/1537#issuecomment-1154642727
classifiers = ["Private :: Do Not Upload"]

[tool.poetry.dependencies]
python = "^3.11"
google-generativeai = "^0.4.0"
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"
jsonlines = "^4.0.0"
rich = "^13.7.1"
typer = "^0.9.0"
typing-extensions = "^4.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
